2021-04-16  Karl Berry  <karl@freefriends.org>

	* tex4ht-docbook.tex (docbook.4ht),
	* tex4ht-ooffice.tex (ooffice.4ht),
	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht),
	* tex4ht-html4.tex (html4-math.4ht, html4.4ht),
	* tex4ht-4ht.tex (tikz-hooks.4ht): copyright 2021.

2021-04-16  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (tikz-hooks.4ht): load dvisvgm4ht driver by default.
	* tex4ht-4ht.tex (chessboard.4ht): added support for the
	chessboard package.

2021-04-15  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (caption.4ht): fix for TOC handling.
	https://tex.stackexchange.com/a/593069/2891

2021-04-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4-math.4ht): fixed paragraph handling for
	eqnarray.
	https://tug.org/pipermail/tex4ht/2021q2/002949.html

2021-04-07  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-mathjax.tex (mathjax-latex-4ht.4ht): fixed configurations for
	gather and gather*.
	https://tex.stackexchange.com/a/591806/2891

2021-03-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (endnotes.4ht): don't use math mode to print
	superscripts. https://tex.stackexchange.com/q/590565/2891

2021-03-27  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): removed space ignoring
	specials from \footnotemark and \foontotetext, they caused removal
	of all spaces from the document when only \footnotetext is used.
	https://tug.org/pipermail/tex4ht/2021q1/002927.html

2021-03-25  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (parallel.4ht),
	* tex4ht-html4.tex (html4.4ht): added support for the parallel package.

2021-03-06  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-sty.tex (tex4ht.sty): preparing for a new LaTeX release, where
	\everypar will be patched by LaTeX kernel.
	https://puszcza.gnu.org.ua/bugs/?477
	* tex4ht-4ht.tex (caption.4ht): prevent expansion of macros
	written to TOC by the \caption command.
	https://tug.org/pipermail/tex4ht/2021q1/002912.html