@@ -2,7 +2,7 @@
 % (1)  tex tex4ht-cond4ht    or   xhtex tex4ht-cond4ht
 % (2)  tex cond4ht.4ht
 %
-% Copyright 2009-2019 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -33,7 +33,7 @@
                              % \AddFile{5}{amsmath} \AddFile{2}{report} ...
 
 % cond4ht.4ht (?version), generated from ?jobname.tex
-% Copyright 2009-2019 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright 1997-2009 Eitan M. Gurari
 ?<TeX4ht copywrite?>
 
