@@ -26,7 +26,7 @@
 
 \<html5\><<<
 % html5.4ht (|version), generated from |jobname.tex
-% Copyright 2016-2020 TeX Users Group
+% Copyright 2016-2021 TeX Users Group
 |<TeX4ht copywrite|>
 >>>
 
