@@ -3,7 +3,7 @@
 % or
 % compile 3 times: latex tex4ht-info   
 %           or   xhlatex tex4ht-info "html,3,sections+"
-% Copyright 2009-2018 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright 2000-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -33,7 +33,7 @@
 
 \<info4ht\><<<
 % info4ht.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2017 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright |CopyYear.2000. Eitan M. Gurari
 %
 % This work may be distributed and/or modified under the
