@@ -526,7 +526,7 @@ xmlns="http://www.w3.org/1999/xhtml"
 
 \<html-mml\><<<
 % html-mml.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2018 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright |CopyYear.1999. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
