@@ -1,7 +1,7 @@
 % $Id$
 % latex tex4ht-unicode   or   xhlatex tex4ht-unicode "html,3,sections+"
 %
-% Copyright 2009-2019 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright 1998-2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
@@ -227,7 +227,7 @@ of \verb'\mathop', \verb'\mathrel',...., for the next parameter.
 
 \<unicode\><<<
 % unicode.4ht (|version), generated from |jobname.tex
-% Copyright 2009-2019 TeX Users Group
+% Copyright 2009-2021 TeX Users Group
 % Copyright |CopyYear.1998. Eitan M. Gurari
 |<TeX4ht copywrite|>
 >>>
