@@ -1,3 +1,11 @@
+2021-04-17  Karl Berry  <karl@freefriends.org>
+
+	* tex4ht-cond4ht.tex (mktex4ht.4ht),
+	* tex4ht-html5.tex (html5.4ht),
+	* tex4ht-info.tex (info4ht.4ht),
+	* tex4ht-mathml.tex (html-mml.4ht),
+	* tex4ht-unicode.tex (unicode.4ht): copyright 2021.
+
 2021-04-16  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-docbook.tex (docbook.4ht),
